fix anchor-jumping in Chrome

--- a/css/themes/counterstrike.css
+++ b/css/themes/counterstrike.css
@@ -6171,6 +6171,15 @@ html {
   display: inline-block;
   /* required for webkit browsers */
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding-top: calc(.5em + 60px);
+  margin-top: -60px;
+}
 hr {
   background-color: #dddddd;
   border: 0 none;
